2007-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-source-decode-level): New variable.
	(w3m-decode-buffer): Control how much it decodes an html source
	according to w3m-view-source-decode-level.
	(w3m-view-source): Bind w3m-view-source-decode-level with prefix arg.

2007-04-25  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-decode-buffer): Encode urls containing non-ASCII
	characters quoted with '' as well as those quoted with "".
	(w3m-goto-url): Decode urls when url is local.

	characters when displaying an html source.

2007-04-24  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-decode-buffer): Use charset specified in meta tag even
	for decoding html source.

2007-04-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install-lisp): Install shimbun/ChangeLog file.

2007-04-24  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-support-emacs-w3m): New variable.
	(w3m-compile-options): Set w3m-support-emacs-w3m to t if w3m compiled
	with emacsdump.
	(w3m-strike-through-face-no-windowsystem): New face.
	(w3m-halfdump-command-arguments): Use '-emacsdump' instead of
	'-halfdump' when w3m has it.
	(w3m-fontify-strike-through): Support w3m-support-emacs-w3m.
	(w3m-fontify-insert): Ditto.

2007-04-24  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-goto-url): Set truncate-lines to nil, if a source or
	header view.
	(w3m-view-source): Remove to set truncate-lines.
	(w3m-view-header): Ditto.

2007-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* ChangeLog, ChangeLog.1: Separate shimbun entries.
	(Local Variables): Set fill-column to 79.

2007-04-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-input-textarea-filename): Use MD5 first.

2007-04-14  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-input-textarea-filename): Truncate filename
	into less than or equal to 255 bytes long.

2007-04-06  Matt Hodges  <M.P.Hodges@rl.ac.uk>

	* w3m.el (w3m-next-buffer): Fix last change when w3m-fb-mode.
