@@ -1,3 +1,8 @@
+2007-04-26  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (w3m-goto-url): Redisplay to search an anchor sure with
+	goto-new-session.
+
 2007-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-view-source-decode-level): New variable.
